--- a/fish/package.json
+++ b/fish/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "element-ui": "^1.3.4",
+    "mint-ui": "^2.2.7",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
